--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+  
   <title>My forst html doc</title>
 </head>
 <body>
-  <h2>Hyperlinks in html</h2>
+  <div id="fuel_export"></div>
+
+<script type="text/javascript">
+
+  var spec2 = "js/fuel_export.vg.json";
+  vegaEmbed('#fuel_export', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+</script>
   
 </body>
 </html>
