--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+
+     <!-- CSS file -->
+  <link rel="stylesheet" type="text/css" href="styles.css" media="all">
   
-  <title>My forst html doc</title>
+  <title>My first html doc</title>
 </head>
 <body>
   <div id="fuel_export"></div>
