--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
-     <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="styles.css" media="all">
+    <!-- CSS file -->
+  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+  
   
   <title>My first html doc</title>
 </head>
