--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "js/fuel_export.vg.json";
+  var spec2 = "js/fuel_exports.vg.json";
   vegaEmbed('#fuel_export', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
