--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <title>My first html doc</title>
 </head>
 <body>
-  <div id="fuel_export"></div>
+  <div id="fuel_exports"></div>
 
 <script type="text/javascript">
 
   var spec2 = "js/fuel_exports.vg.json";
-  vegaEmbed('#fuel_export', spec2).then(function(result) {
+  vegaEmbed('#fuel_exports', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
