--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
   
   
-  <title>My first html doc</title>
+  <title>Fuel Export world map</title>
 </head>
 <body>
   <div id="fuel_exports"></div>
