--- a/week_10/index.html
+++ b/week_10/index.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "week 10/js/fuel_produce.vg.json";
+  var spec2 = "js/fuel_produce.vg.json";
   vegaEmbed('#fuel_produce', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
