--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -85,19 +85,19 @@
     var specVis1 = "js/fuel_exports.vg.json";
     var specVis2 = "js/fuel_produce.vg.json";
 
-    vegaEmbed('#vis1', specVis1, { "actions": false });
+    vegaEmbed('#vis1', specVis1, { 
+      "width": 400,  // Set desired width
+      "height": 300, // Set desired height
+      "actions": false });
 
-    vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
+    vegaEmbed('#vis2', specVis2, {
+      "width": 400,  // Set desired width
+      "height": 300, // Set desired height
+      "actions": false 
+    }).then(function (result) {
       // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
     }).catch(console.error);
 
-    vegaEmbed('#vis3', specVis1, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
-
-    vegaEmbed('#vis4', specVis2, { "actions": false }).then(function (result) {
-      // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-    }).catch(console.error);
   </script>
 </body>
 
