--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
   <!-- Import pure.css -->
-  <link rel="stylesheet" href="vis_styles.css">
+   <link rel="stylesheet" type="text/css" href="css/vis_styles.css" media="all">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Google font -->
@@ -30,7 +30,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1 align="center">Fuel Industry in Malaysia</h1>
+        <h1>Fuel Industry in Malaysia</h1>
       </div>
     </div>
     <!-- end pure grid group -->
