--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -27,7 +27,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1>Fuel Industry in Malaysia</h1>
+        <h1 align="center">Fuel Industry in Malaysia</h1>
       </div>
     </div>
     <!-- end pure grid group -->
@@ -36,7 +36,7 @@
     <div class="pure-g">
       <div class="pure-u-1-2">
         <div class="description description-left">
-          <h2>Fuel production in Malaysia</h2>
+          <h2>Fuel exports from Malaysia in 2021</h2>
           <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
@@ -55,7 +55,7 @@
       </div>
       <div class="pure-u-1-2">
         <div class="description description-left">
-          <h2>Fuel exports from Malaysia in 2021</h2>
+          <h2>Primary Production by Fuel Type</h2>
           <p>The first column contains text and the second column contains a visualisation.
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
