--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -27,7 +27,7 @@
     <!-- pure grid group -->
     <div class="pure-g">
       <div class="pure-u-1-1">
-        <h1 align="center">Fuel Industry in Malaysia</h1>
+        <h1>Fuel Industry in Malaysia</h1>
       </div>
     </div>
     <!-- end pure grid group -->
