--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -25,9 +25,11 @@
   <div class="page">
     
     <!-- pure grid group -->
+    <div class="pure">
       <div class="pure-u-1-1">
         <h1>Fuel Industry in Malaysia</h1>
       </div>
+    </div>
     <!-- end pure grid group -->
 
     <!-- pure grid group -->
