--- a/week_10/two_visualisation.html
+++ b/week_10/two_visualisation.html
@@ -37,9 +37,11 @@
       <div class="pure-u-1-2">
         <div class="description description-left">
           <h2>Fuel exports from Malaysia in 2021</h2>
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          <p>Malaysia is a significant exporter of fuel, particularly petroleum and liquefied natural gas (LNG).
+ The country's abundant oil and gas reserves have made it a key player in global energy markets.
+ Crude oil, refined petroleum products, and LNG are among Malaysia's top fuel exports, with major export destinations including China, Japan, and South Korea.
+ The fuel export sector is vital to Malaysia's economy, contributing substantially to national revenue and supporting the country's
+ development as a regional energy hub.</p>
         </div>
       </div>
       <div class="pure-u-1-2">
@@ -56,9 +58,12 @@
       <div class="pure-u-1-2">
         <div class="description description-left">
           <h2>Primary Production by Fuel Type</h2>
-          <p>The first column contains text and the second column contains a visualisation.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Massa sapien faucibus et molestie ac feugiat sed. </p>
+          <p>Malaysia's primary energy production is dominated by oil and natural gas, which account for the 
+largest share of the country's fuel mix. Natural gas, in particular, plays a significant role due to Malaysia's abundant reserves, 
+contributing to both domestic consumption and exports. Coal is also a key fuel type, primarily used in electricity generation,
+while renewable energy sources like hydropower, solar, and biomass are gradually growing in importance as part of Malaysia's efforts
+ to diversify its energy mix and promote sustainability. The government is increasingly focusing on expanding renewable energy 
+capacity to reduce dependence on fossil fuels. </p>
         </div>
       </div>
     </div>
