--- a/final/index.html
+++ b/final/index.html
@@ -17,7 +17,7 @@
 
 <script type="text/javascript">
 
-  var spec2 = "js/fuel_consumption.vg.json";
+  var spec2 = "js/asia_pacific_fuels.vg.json";
   vegaEmbed('#fuel_produce', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
