--- a/final/index.html
+++ b/final/index.html
@@ -13,12 +13,23 @@
   <title>Final Consumption of fuel products in Malaysia</title>
 </head>
 <body>
-  <div id="fuel_produce"></div>
+  <div id="vis1"></div>
+   <div id="vis2"></div>
+   <div id="vis3"></div>
+
 
 <script type="text/javascript">
 
-  var spec2 = "js/revenue.vg.json";
-  vegaEmbed('#fuel_produce', spec2).then(function(result) {
+  var spec1 = "js/revenue.vg.json";
+  vegaEmbed('#vis1', spec1).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+   var spec2 = "js/asia_pacific_fuels.vg.json";
+  vegaEmbed('#vis2', spec2).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+    var spec3 = "js/fuel_consumption.vg.json";
+  vegaEmbed('#vis3', spec3).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
