--- a/final/index.html
+++ b/final/index.html
@@ -16,6 +16,7 @@
   <div id="vis1"></div>
    <div id="vis2"></div>
    <div id="vis3"></div>
+    <div id="vis4"></div>
 
 
 <script type="text/javascript">
@@ -30,6 +31,10 @@
   }).catch(console.error);
     var spec3 = "js/fuel_consumption.vg.json";
   vegaEmbed('#vis3', spec3).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+   var spec4 = "js/sector.vg.json";
+  vegaEmbed('#vis4', spec4).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
