--- a/final/index.html
+++ b/final/index.html
@@ -17,6 +17,7 @@
    <div id="vis2"></div>
    <div id="vis3"></div>
     <div id="vis4"></div>
+   <div id="vis5"></div>
 
 
 <script type="text/javascript">
@@ -35,6 +36,10 @@
   }).catch(console.error);
    var spec4 = "js/sector.vg.json";
   vegaEmbed('#vis4', spec4).then(function(result) {
+    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+    var spec5 = "js/CO2_ems.vg.json";
+  vegaEmbed('#vis5', spec5).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
