--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -1,4 +1,54 @@
 <!DOCTYPE HTML>
 <html>
+  <head>
+  <title>Fuel Industry in Malaysia</title>
   
+  <!-- Meta tag for responsiveness -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Import Vega & Vega-Lite -->
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+
+  <!-- Import CSS -->
+  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+
+  <!-- Google font -->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+  </head>
+<body>
+  <div class='heading'>
+    <h1>OIL AND GAS INDUSTRY IN MALAYSIA</h1>
+  </div>
+  <p>Malaysia, situated in Southeast Asia, plays a crucial role in the oil and gas industry, which is a major pillar of the nation's economy.
+    The country began producing oil in the early 1900s from onshore fields in Sarawak and expanded into shallow-water plays in Peninsular Malaysia,
+    Sarawak, and Sabah during the 1960s.Since then, Malaysia has ranked as the 4th largest oil producer in the Asia-Pacific region and the 2nd largest
+    in Southeast Asia. According to Zvonimir Djerfi, President of the Asia-Pacific division, "Other locations in the Asia-Pacific region are not as
+    central as Malaysia, and they either lack space or a capable workforce to meet the needs of the oil and gas services industry." Both short-term
+    and long-term investments in Malaysia are likely to yield promising results.</p>
+  
+  <div class='pure-g'>
+    <div class='oil_compare'>
+      <h3>Comparison of oil producing countries</h3>
+      <p>Malaysia’s most valuable mineral resources are its reserves of petroleum and natural gas. Crude oil, refined petroleum, and, more recently,
+        liquefied natural gas (LNG) together account for a major portion of the country’s commodity export earnings. Most of crude oil is produced
+        in Sabah (42%), Peninsular malaysia (32%) and Sarawak (26%). These oil production helped Malaysia to stand at 4th place in oil producing countries 
+        of Asia pacific region and 2nd in South east asia after Indonesia.
+      </p>
+      <div id="vis1" class="vis-container"></div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    var specVis1 = "js/asia_pacific_fuels.vg.json";
+
+    vegaEmbed('#vis1', specVis1, { 
+      "width": 500,  
+      "height": 350, 
+      "actions": false 
+    });
+
+  </script>
 </html>
