--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -22,7 +22,8 @@
   <div class='heading'>
     <h1>OIL AND GAS INDUSTRY IN MALAYSIA</h1>
   </div>
-  <p>Malaysia, situated in Southeast Asia, plays a crucial role in the oil and gas industry, which is a major pillar of the nation's economy.
+  <div class='content'>
+  <p >Malaysia, situated in Southeast Asia, plays a crucial role in the oil and gas industry, which is a major pillar of the nation's economy.
     The country began producing oil in the early 1900s from onshore fields in Sarawak and expanded into shallow-water plays in Peninsular Malaysia,
     Sarawak, and Sabah during the 1960s.Since then, Malaysia has ranked as the 4th largest oil producer in the Asia-Pacific region and the 2nd largest
     in Southeast Asia. According to Zvonimir Djerfi, President of the Asia-Pacific division, "Other locations in the Asia-Pacific region are not as
@@ -40,13 +41,14 @@
       <div id="vis1" class="vis-container"></div>
     </div>
   </div>
+ </div>
 
   <script type="text/javascript">
     var specVis1 = "js/asia_pacific_fuels.vg.json";
 
     vegaEmbed('#vis1', specVis1, { 
-      "width": 500,  
-      "height": 350, 
+      "width": 350,  
+      "height": 250, 
       "actions": false 
     });
 
