--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -35,10 +35,10 @@
       <h3>Comparison of oil producing countries</h3>
       <p>Malaysia’s most valuable mineral resources are its reserves of petroleum and natural gas. Crude oil, refined petroleum, and, more recently,
         liquefied natural gas (LNG) together account for a major portion of the country’s commodity export earnings. 
-        
-        Most of crude oil is produced
-        in Sabah (42%), Peninsular malaysia (32%) and Sarawak (26%). These oil production helped Malaysia to stand at 4th place in oil producing countries 
-        of Asia pacific region and 2nd in South east asia after Indonesia.
+      </p>
+      <p>
+        Most of crude oil is produced in Sabah (42%), Peninsular malaysia (32%) and Sarawak (26%). These oil production helped Malaysia to stand at 
+        4th place in oil producing countries of Asia pacific region and 2nd in South east asia after Indonesia.
       </p>
     </div>
     <div class='pure-u-1-2'>
