--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -71,7 +71,7 @@
     </div>
     
     <div class='pure-g'>    
-      <h3>Economic Impact and in Oil-Exporting Countries</h3>
+      <h3>Economic Impacts in Oil-Exporting Countries</h3>
       <p>Oil rents play a significant role in the formulation of the PGEB (Petroleum-Government Expenditure Budget) for oil-exporting nations. However, tax collection remains a crucial source of revenue for all countries, including oil exporters. In fact, tax revenue is often the most important contributor to budget formulation. To fully understand the relationship between oil rents and the PGEB, both tax revenue and oil rents must be considered for Malaysia and other oil-exporting nations.
       </p>
         
