--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -92,7 +92,7 @@ Malaysia and other oil-exporting nations depend on both sources.
     <div id="vis5" class="vis-container"></div>
     </div>
     
-    <div class='pure-g'>
+    <div class='pure-h'>
     <div class='pure-u-1-2'>
       <h3>Oil consumed by different sectors</h3>
       <p>In Malaysia, fuel consumption varies across sectors with economic activities.  
@@ -105,7 +105,8 @@ Fuel consumption highlights Malaysia's dependence on fossil fuels today.
 There is potential for transitioning to more sustainable energy sources.  </p>
     </div>
     <div class='pure-u-1-2'>
-      <div id="vis6" class="vis-container"></div>
+      <div id="vis6" class="vis-container">
+      </div>
     </div>
     </div>
     <div class='pure-g'>    
