--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -74,7 +74,7 @@ Malaysia is developing as a regional energy hub within Southeast Asia.
     </div>
     
     <div class='pure-g'>    
-      <h3>Economic Impact and in Oil-Exporting Countries</h3>
+      <h3>Economic Impact in Oil-Exporting Countries</h3>
       <p>Oil rents are vital in formulating the PGEB for oil exporters.  
 Tax collection is still an essential source of government revenue.  
 For oil exporters, tax revenue often plays the biggest role.  
@@ -122,6 +122,7 @@ Economic growth and energy demand pose significant challenges ahead.
         
     <div id="vis7" class="vis-container"></div>
     </div>
+     <p>This visualisation is created by <a href="https://github.com/hansi18/FIT3179/tree/main" target="_blank">Hansikaa Aggarwal</a>. The datasource is <a href="https://hansi18.github.io/FIT3179/final/metadata.html" target=" _blank">this repository</href>.</p>
   </div>
  </div>
 
