--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -161,9 +161,9 @@ The industrial sector uses fuel for manufacturing and operations. Residential an
     });
     
     vegaEmbed('#vis7', specVis7, { 
-      "actions": false 
-    }).then(function(result) {
-      // Access the Vega view instance
-    }).catch(console.error);
+      "width": 400,  
+      "height": 400, 
+      "actions": false
+    });
   </script>
 </html>
