--- a/final/final_vis.html
+++ b/final/final_vis.html
@@ -29,8 +29,8 @@ Oil production began in Sarawak in the early 1900s, expanding
 to Peninsular Malaysia, Sarawak, and Sabah by the 1960s.  
 Malaysia ranks 4th in oil production in the Asia-Pacific,  
 and 2nd in Southeast Asia, solidifying its strategic importance.  
-Zvonimir Djerfi, Asia-Pacific President, said<i>"Other locations in the Asia Pacific
-region are not as central as Malaysia, and they either lack space or workforce."</i>  
+Zvonimir Djerfi, Asia-Pacific President, said<i> "Other locations in the Asia Pacific
+region are not as central as Malaysia, as they either lack space or workforce."</i>  
 </p>
   
   <div class='pure-g'>
@@ -64,7 +64,7 @@ East Malaysia's oil fields mainly export to the international market.
       <p>Malaysia exports fuel, especially <b>petroleum</b> and <b>liquefied natural gas (LNG)</b>.  
 Its large oil and gas reserves make it globally significant in energy.  
 Crude oil, refined petroleum, and LNG are Malaysia's top exports.  
-Key export destinations include China, Japan, and South Korea mainly.  
+Key export destinations include <b>China, Japan, and South Korea</b> mainly.  
 The fuel export sector is crucial to Malaysia’s growing economy.  
 It contributes significantly to national revenue and overall development efforts.  
 Malaysia is developing as a regional energy hub within Southeast Asia.
@@ -108,7 +108,7 @@ The industrial sector uses fuel for manufacturing and operations. Residential an
   
     <div class='pure-u-1-2'>
       <h3>Comparison of CO2 Emissions of Different Countries</h3>
-      <p>CO2 emissions in Malaysia mainly come from fossil fuel reliance. Oil and natural gas are primary sources for energy production. The industrial sector significantly contributes, especially manufacturing and palm oil. Transportation emissions rise with increasing vehicle ownership in Malaysia. Deforestation for agriculture, particularly palm oil, worsens carbon emissions. Efforts focus on renewable energy and improving energy efficiency.
+      <p>CO2 emissions in Malaysia mainly come from <b>fossil fuel reliance</b>. Oil and natural gas are primary sources for energy production. The industrial sector significantly contributes, especially manufacturing and palm oil. Transportation emissions rise with increasing vehicle ownership in Malaysia. Deforestation for agriculture, particularly palm oil, worsens carbon emissions. Efforts focus on renewable energy and improving energy efficiency.
       </p>
       <div id="vis7" class="vis-container"></div>
     </div>
