--- a/final/metadata.html
+++ b/final/metadata.html
@@ -3,13 +3,13 @@
   <h1>Metadata</h1>
   <body  style="font-size: 20px;">
     <ul type="disc">
-      <li>Oil producing countries graph: <a href>https://www.iea.org/regions/asia-pacific/oil</a></li>
-      <li>Primary fuels produced in malaysia: <a href>https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf</a></li>
-      <li>Exports of oil from Malaysia :<a href>https://wits.worldbank.org/CountryProfile/en/Country/MYS/Year/2021/TradeFlow/Export/Partner/all/Product/27-27_Fuels</a></li>
-      <li>Economic impacts on oil producing countries: <a href>https://km.anm.gov.my/Aset%20Pengetahuan%20Bahagian/IPN/UMUM/MONOGRAF%20PENYELIDIKAN%202023/Final_Digital_Oil%20Rents%20and%20Primary%20Government%20Expenditure%20Budget.pdf</a></li>
-      <li>Fuel consumption by fuel types: <a href>https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf</a></li>
-      <li>Fuel consumed by sectors: <a href>https://meih.st.gov.my/documents/10620/0533ae61-2fd0-4c67-bdf9-07c51c468840</a></li>
-      <li>Comparison of CO2 emitting countries: <a href>https://ourworldindata.org/co2/country/malaysia?country=~VNM</a></li>
+      <li>Oil producing countries graph: <a href="https://www.iea.org/regions/asia-pacific/oil" target="_blank">https://www.iea.org/regions/asia-pacific/oil</a></li>
+      <li>Primary fuels produced in malaysia: <a href="https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf" target="_blank">https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf</a></li>
+      <li>Exports of oil from Malaysia :<a href="https://wits.worldbank.org/CountryProfile/en/Country/MYS/Year/2021/TradeFlow/Export/Partner/all/Product/27-27_Fuels" target="_blank">https://wits.worldbank.org/CountryProfile/en/Country/MYS/Year/2021/TradeFlow/Export/Partner/all/Product/27-27_Fuels</a></li>
+      <li>Economic impacts on oil producing countries: <a href="https://km.anm.gov.my/Aset%20Pengetahuan%20Bahagian/IPN/UMUM/MONOGRAF%20PENYELIDIKAN%202023/Final_Digital_Oil%20Rents%20and%20Primary%20Government%20Expenditure%20Budget.pdf" target="_blank">https://km.anm.gov.my/Aset%20Pengetahuan%20Bahagian/IPN/UMUM/MONOGRAF%20PENYELIDIKAN%202023/Final_Digital_Oil%20Rents%20and%20Primary%20Government%20Expenditure%20Budget.pdf</a></li>
+      <li>Fuel consumption by fuel types: <a href="https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf" target="_blank">https://www.st.gov.my/en/contents/files/download/116/Malaysia_Energy_Statistics_Handbook_20201.pdf</a></li>
+      <li>Fuel consumed by sectors: <a href="https://meih.st.gov.my/documents/10620/0533ae61-2fd0-4c67-bdf9-07c51c468840" target="_blank">https://meih.st.gov.my/documents/10620/0533ae61-2fd0-4c67-bdf9-07c51c468840</a></li>
+      <li>Comparison of CO2 emitting countries: <a href="https://ourworldindata.org/co2/country/malaysia?country=~VNM" target="_blank">https://ourworldindata.org/co2/country/malaysia?country=~VNM</a></li>
     </ul>
   </body>
 </html>
